# mnemonic

./: .gitignore  AGENTS.md  Cargo.toml  README.md
engine/: Cargo.toml  LICENSE
engine/src/: engine.rs  error.rs  lib.rs  models.rs  storage.rs
engine/src/document/: mod.rs
engine/src/document/extensions/: dictionary.rs  mod.rs  table.rs  text.rs
engine/src/models/: cell.rs  fabric.rs  mod.rs  version.rs
engine/src/service/: context.rs  mod.rs
engine/src/storage/: mariadb.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs  time.rs
engine/test_output/scenario_documents/: case_01_technical_document_db_snapshot.txt  case_01_technical_document_source.md  case_02_business_proposal_db_snapshot.txt  case_02_business_proposal_rendered.md  case_03_academic_paper_db_snapshot.txt  case_03_academic_paper_source.md  case_04_research_document_db_snapshot.txt  case_04_research_document_rendered.md  case_05_novel_script_db_snapshot.txt  case_05_novel_script_source.md  case_06_drama_script_db_snapshot.txt  case_06_drama_script_source.md  case_07_translation_workspace_db_snapshot.txt  case_07_translation_workspace_rendered.md  case_08_document_with_external_references_db_snapshot.txt  case_08_document_with_external_references_rendered.md  first_case_technical_document_db_snapshot.txt  first_case_technical_document_source.md  general_daily_cases.sqlite
engine/tests/: basic.rs  document_service.rs  scenario_first_document.rs  use_case_data.rs
server/: Cargo.toml  README.md
server/src/: lib.rs  main.rs
server/tests/: api.rs
