[package]
name = "mnemonic-engine"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Arion Yau"]
description = "The engine component of the mnemonic project."
repository = "https://github.com/ArionYau/mnemonic" # Assuming this exists or will exist as it is part of the parent project.

[dependencies]
rusqlite = {version = "0.38.0", features=["bundled"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.149"
uuid = {version = "1.19.0", features = ["v7", "serde"]}
thiserror = "2.0.17"