[package]
name = "mnemonic-server"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Arion Yau"]
description = "HTTP REST API server for Mnemonic Engine."

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.39", features = ["serde", "clock"] }
uuid = { version = "1.19.0", features = ["serde"] }
mnemonic-engine = { path = "../engine" }

[dev-dependencies]
tower = "0.5.2"
http-body-util = "0.1.3"
